Fixed an issue with shipping modules not loading because of WIndows-platform filepaths Fixed a style issue in the Authorize.net settings Fixed an issue rendering the tag cloud in IE7 related to IE's need for white space in order to wrap inline elements Fixed an issued causing a blank row in the category product display Fixed an issue with category product slugs not being loaded in MySQL 4 Fixed a bug with the category menu rendering that was causing it not to be returned during AJAX category adds in the product editor Added explicit .grid class to category grid markup Added file path instructions when no file path is provided Enhanced interfaces to support WordPress 2.7 admin including contextual help and moving update messages below the screen title Removed any global styles from the catalog.css file, the core style definitions for Shopp Updated the help path for the editors to reference new documentation on the wiki
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@254 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/shopp/core/ui/styles/catalog.css
+++ b/shopp/core/ui/styles/catalog.css
@@ -64,11 +64,11 @@ div.clear,
  * Shopp Catalog Tag Cloud
  **/
 
-#shopp .shopp.tagcloud,
-.shopp.tagcloud { padding: 0; }
+#shopp .tagcloud,
+.shopp.tagcloud { padding: 0; width: 100%; }
 
-#shopp .shopp.tagcloud li,
-.shopp.tagcloud li { display: inline-block; margin-right: 10px; line-height: 1.2; padding: 0; background-image: none; }
+#shopp .tagcloud li,
+.shopp.tagcloud li { display: inline; margin-right: 10px; line-height: 1.2; padding: 0; background-image: none; }
 .shopp.tagcloud li.level-1 { font-size: 30px; }
 .shopp.tagcloud li.level-2 { font-size: 24px; }
 .shopp.tagcloud li.level-3 { font-size: 20px; }
@@ -106,7 +106,6 @@ div.clear,
  * Debug Console
  **/
 #overlay { position: absolute; left: 0; width: 100%; opacity: 0.6; background-color: #000; margin: 0; }
-html,body { height: 100%; }
 #debug.shopp { position: absolute; left: 25%; top: 100px; width: 50%; margin: 0 auto; height: 300px; overflow-y: auto; background: #fff; border: 5px solid #999; text-align: left; padding: 10px; font: 12px/1 "Lucida Grande",monospace; }
 #debug.shopp.overlay { position: absolute; width: 100%; height: 100%; background: #000; top: 0; left: 0; padding: 0; opacity: 0.8; border: none; }
 #debug.shopp h3 { font: bold 15px/1 "Lucida Grande",monospace;  margin-top: 0; }
